err.log
In file included from ./src/external.c:1:0:
./include/base.h:136:0: warning: "max" redefined
 #define max(a,b)    (((a) > (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/external.c:1:
c:\program files\git\mingw32\include\windef.h:162:0: note: this is the location of the previous definition
 #define max(a,b) ((a)>(b)?(a):(b))
 
In file included from ./src/external.c:1:0:
./include/base.h:137:0: warning: "min" redefined
 #define min(a,b)    (((a) < (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/external.c:1:
c:\program files\git\mingw32\include\windef.h:165:0: note: this is the location of the previous definition
 #define min(a,b) ((a)<(b)?(a):(b))
 
./src/external.c:19:24: error: conflicting types for 'StartMonitorServer'
 CAPTUREANDCAST_API int StartMonitorServer(const int clientPort, const int controlPort, const int dataPort, const int winStyleFlag, const int pageSize, stop_callback call)
                        ^~~~~~~~~~~~~~~~~~
In file included from ./src/external.c:2:0:
./include/external.h:21:24: note: previous declaration of 'StartMonitorServer' was here
 CAPTUREANDCAST_API int StartMonitorServer(const int clientPort, const int controlPort, const int dataPort, const int winStyleFlag, const int pageSize);
                        ^~~~~~~~~~~~~~~~~~
./src/external.c: In function 'SetPageAttribute':
./src/external.c:106:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [external.o] Error 1
